# rsocket-haskell

./: LICENSE  README.md  rsocket.cabal
src/: RSocket.hs
src/Network/: RSocket.hs
src/RSocket/: Frames.hs  ProtoV10.hs  Types.hs
src/RSocket/Wireformat/: ProtoV10.hs  Validators.hs
