name:                rsocket
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/th0br0/rsocket-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Andreas C. Osowski
maintainer:          andreas@osowski.de
copyright:           2017 Andreas C. Osowski
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.RSocket
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite rsocket-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rsocket
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/th0br0/rsocket-haskell
